# jig

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  install.sh  jig.md  justfile  landing.md  scripts
.claude/commands/: clean-copy.md  plan-review.md  review.md  spacex.md  ws-autopilot.md  ws-consolidate.md  ws-execute.md  ws-init.md  ws-plan-review.md  ws-plan.md  ws-review-cycle.md  ws-review-fix.md  ws-review.md  ws-task-init.md  ws-validate.md
.claude/skills/: workstream-planning
docs/: ADD-FIELD-MECHANICAL-HYPOTHESES-2026-04-06.md  AGENT-BUNDLE-DISTRIBUTION-RESEARCH-2026-04-09.md  ARCHITECTURE.md  DISTRIBUTION-MANUAL-RELEASE-PLAN-2026-04-06.md  EVAL-SCHEMA-COMPAT-PLAN-2026-04-06.md  EXAMPLES-PLAN-2026-04-09.md  INVARIANTS.md  RELEASE-MANUAL.md  ROADMAP.md  SITE-DESIGN-2026-04-09.md  TEMPLATED-SELECTOR-REQUIREMENTS-2026-04-09.md
docs/workstreams/: ARCHIVE.md  README.md
eval/: agents.yaml  package-lock.json  package.json  tsconfig.json
eval/experiments/: README.md  analyze-gradient.ts  experiments.jsonl  (+4 more)
examples/: README.md
keys/: release-public-key.pem
mcp-server/: README.md  package-lock.json  package.json
scripts/: deploy-site.sh  validate.sh  ws-autopilot.sh  ws-consolidate.sh  ws-execute.sh  ws-init.sh  ws-plan-review.sh  ws-plan.sh  ws-review-cycle.sh  ws-review-fix.sh  ws-review.sh  ws-task-init.sh
site/: README.md  index.html  index2.html
src/: agent.rs  error.rs  filters.rs  main.rs  notice.rs  output.rs  prepare.rs  recipe.rs  renderer.rs  variables.rs  workflow.rs
tests/: cli.rs  integration.rs  library.rs
(+868 files in other folders)
