[package]
name = "jig-cli"
version = "0.1.0"
edition = "2024"
description = "Template rendering CLI for LLM code generation workflows"
license = "MIT"

[[bin]]
name = "jig"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
heck = "0.5"
include_dir = "0.7"
indexmap = { version = "2", features = ["serde"] }
minijinja = "2"
pluralizer = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
strsim = "0.11"
thiserror = "2"
owo-colors = "4"

[dev-dependencies]
insta = "1"
tempfile = "3"
